# nanogpt

./: orch_model.py  pyproject.toml  train.py
config/: train_orch.py
data/orchdata/: prepare.py
